<?xml version="1.0"?>
<package format="2">
  <name>turtlebot3_dlu9576</name>
  <version>0.1.0</version>
  <description>The turtlebot3_dlu9576 package</description>

  <maintainer email="dominic.luidold@students.fhv.at">Dominic Luidold</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>turtlebot3_msgs</build_depend>

  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>turtlebot3_msgs</build_export_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>turtlebot3_msgs</exec_depend>
</package>
